# bumperbot

./: .gitignore  CPP_code_examples.md  Python_code_examples.md  README.md  Section_2_Setup.md  Section_3A_Intro_to_ROS2_Why_ROS2.md  Section_3B_Intro_to_ROS2_Simple_Pub_Sub_Python.md  Section_3C_Intro_to_ROS2_Simple_Pub_Sub_CPP.md  Section_4_Locomotion.md  Section_5_Control.md  Section_6_Kinematics.md  Section_7_Differential_Kinematics.md  Section_8_TF2.md
assembly/: BOM - Bumperbot.xlsx  BOM - Bumperbot_old.xlsx  README.md
assembly/SLDPRTs/: Bumperbot_part1.SLDASM  JGA25-370.SLDPRT  L298N.SLDPRT  LM2596_DC_DC.SLDPRT  MPU_6050.SLDPRT  SUPPORT_HEX_M3_0XL07_FF.SLDPRT  SUPPORT_HEX_M3_0XL45_FF.SLDPRT  TekniRoll.D30mm.TR670-001.SLDPRT  battery_pack.SLDPRT  motor_support.SLDPRT  waffle_base_plate.SLDPRT  wheel.SLDPRT  wheel_motor_adapter.SLDPRT
assembly/Schematics/: BumperBot_Arduino_Nano.fzz  BumperBot_ESP32.fzz  simple_encoder_reader.fzz  simple_motor_control.fzz
notes/: CPP_code_examples.md  Python_code_examples.md  Section_10_Probability_for_Robotics.md  Section_3_Intro_to_ROS2_Why_ROS2.md  Section_7_Differential_Kinematics.md
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/bumperbot_controller/: simple_controller.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_config.yaml
src/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
src/bumperbot_cpp_examples/include/bumperbot_cpp_examples/: simple_turtlesim_kinematics.hpp
src/bumperbot_cpp_examples/src/: simple_parametric.cpp  simple_publisher.cpp  simple_subscriber.cpp  simple_turtlesim_kinematics.cpp
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/launch/: display.launch.py  gazebo.launch.py
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
src/bumperbot_py_examples/: package.xml  setup.cfg  setup.py
src/bumperbot_py_examples/bumperbot_py_examples/: simple_parametric.py  simple_publisher.py  simple_subscriber.py  simple_tf_kinematics.py  simple_turtlesim_kinematics.py
